--- a/CafeAvalonia/Views/AdminWindow.axaml
+++ b/CafeAvalonia/Views/AdminWindow.axaml
@@ -22,6 +22,9 @@
 					HorizontalAlignment="Left" Margin="0,0,10,10"/>
 			<Button Content="🔄 Обновить"
 			   Command="{Binding RefreshEmployeesCommand}" />
+			<Button Content="📊 Отчет по смене"
+		   Command="{Binding CreateShiftReportCommand}"
+		   HorizontalAlignment="Left" Margin="0,0,10,10"/>
 		</StackPanel>
 
 		
